apps/cluster1/novnc-guix/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: novnc
spec:
  selector:
    matchLabels:
      app.kubernetes.io/part-of: guix
  template:
    metadata:
      labels:
        app.kubernetes.io/part-of: guix
    spec:
      containers:
      - name: novnc
