apps/cluster1/novnc-guix/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: novnc
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/whitelist-source-range: "10.0.0.0/8,192.168.0.0/16"
spec:
  ingressClassName: nginx
  tls:
  - hosts:
    - novnc.guix.home.wugi.info
    secretName: novnc-guix-home-wugi-info-ingress-certs
  rules:
  - host: novnc.guix.home.wugi.info
    http:
      paths:
      - path: /
        pathType: ImplementationSpecific
        backend:
          service:
            name: novnc
            port:
              number: 80
